--- a/_posts/2025-07-28-ctf-minds.md
+++ b/_posts/2025-07-28-ctf-minds.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Tips On WebExploitation"
+title: "Tips On WebExploitation-1"
 date: 2025-07-28
-categories: [CTF TipsNricks]
+categories: [CTF Tips & Tricks]
 tags: [picoctf, webexploitation, ctf]
 ---
 
